Configure for Vercel production deployment
Vercel Configuration:
- Enhanced vercel.json with security headers and caching
- Added SPA routing rewrites for client-side navigation
- Configured asset optimization with immutable caching
- Added security headers (XSS, CSRF, content sniffing protection)

Production Build Optimization:
- Updated vite.config.ts with terser minification
- Added sourcemap control and modern ES target
- Optimized chunk naming for cache-busting
- Enhanced build performance settings

Deployment Support:
- Added .env.production with production variables
- Created comprehensive DEPLOYMENT.md guide
- Updated .gitignore for Vercel and production files
- Added terser dependency for production minification
- Created build:prod and deploy scripts

Bundle Optimization Results:
- game-engine: 288.78 kB (gzipped: 85.90 kB)
- Total bundle size maintained while adding deployment optimizations
- All chunks properly split for optimal caching

Ready for deployment: npm run deploy

--- a/.gitignore
+++ b/.gitignore
@@ -9,10 +9,17 @@ dist/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
 # Environment variables
 .env
-.env.*
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Vercel
+.vercel
 
 # OS & editor files
 .DS_Store
@@ -36,3 +43,19 @@ public.zip  # Optional redundancy, already caught by *.zip
 
 # Backup directories
 src-backup*
+
+# TypeScript
+*.tsbuildinfo
+
+# Coverage reports
+coverage/
+.nyc_output
+
+# Dependency directories
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
