--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "build:prod": "npm run typecheck && npm run build",
     "preview": "vite preview",
     "typecheck": "tsc --noEmit",
     "lint": "eslint .",
@@ -22,7 +23,9 @@
     "smoke": "node scripts/smoke/smoke-test.js",
     "smoke:headful": "HEADFUL=true node scripts/smoke/smoke-test.js",
     "test:unit": "jest",
-    "test:unit:watch": "jest --watch"
+    "test:unit:watch": "jest --watch",
+    "deploy": "npm run build:prod && vercel --prod",
+    "deploy:preview": "npm run build && vercel"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.80.7",
@@ -67,6 +70,7 @@
     "prettier": "^3.6.2",
     "solarlunar": "^2.0.7",
     "tailwindcss": "^3.4.17",
+    "terser": "^5.43.1",
     "ts-jest": "^29.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2",
